# readcomb

./: .gitignore  README.md  setup.cfg  setup.py
readcomb/: __init__.py  bamprep.py  classification.py  false_positives.py  filter.py  phase_change_filter.py  phase_change_process.py  phase_change_readable.py  unaligned_reads.txt  vcfprep.py
tests/: mock_create.py  parental_filtered.vcf.gz.tbi  test_filter.py
tests/mock_sams/: info.md  mock_1.sam  mock_2.sam  mock_3.sam
