[metadata]
name = readcomb
version = 0.4.0
url = https://github.com/ness-lab/readcomb
description = Fast detection of recombinant reads in BAMs
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLV3+
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Development Status :: 3 - Alpha
    Operating System :: OS Independent

[options]
zip_safe = False
scripts = 
    readcomb/filter.py
    readcomb/vcfprep.py
    readcomb/bamprep.py
    readcomb/false_positives.py
py_modules = 
    readcomb/false_positives
    readcomb/filter
    readcomb/classification
install_requires = 
    cyvcf2
    pysam
    pandas
    tqdm

[options.entry_points]
console_scripts = 
    readcomb-filter = filter:matepair_process
    readcomb-vcfprep = vcfprep:main
    readcomb-bamprep = bamprep:main
    readcomb-fp = false_positives:main
